plugins {
    id 'java'
    id 'org.xbib.gradle.plugin.jflex' version '1.2.0'
    id 'org.xbib.gradle.plugin.jacc' version '1.1.3'
}

group 'decaf'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_12

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/commons-cli/commons-cli
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
}

jar {
    manifest {
        attributes 'Main-Class': 'decaf.Main'
    }

    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}